--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,3 +14,4 @@ jobs:
         with:
           python-version: 3.x
       - run: pip install -r requirements.txt 
+      - run: mkdocs gh-depoly —force
